--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.27.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
